many changes, add jquery slider, style changes

--- a/module/Page/view/page/page/contacts.phtml
+++ b/module/Page/view/page/page/contacts.phtml
@@ -11,9 +11,9 @@
     </div>
     <div class="contacts-right-column_phones">
         <div class="contacts-right-column_phone-icon_mts"></div>
-        <div class="contacts-right-column_phone-number"><a href="skype:echo123?call">+375 29 615-27-93</a></div>
+        <div class="contacts-right-column_phone-number"><a href="#">+375 29 615-27-93</a></div>
         <div class="contacts-right-column_phone-icon_vel"></div>
-        <div class="contacts-right-column_phone-number"><a href="skype:echo123?call">+375 33 615-27-93</a></div>
+        <div class="contacts-right-column_phone-number"><a href="#">+375 33 615-27-93</a></div>
         <div class="contacts-right-column_phone-icon_sky"></div>
         <div class="contacts-right-column_phone-number">abcmedia.by</div>
     </div>
