--- a/module/Page/view/page/page/design.phtml
+++ b/module/Page/view/page/page/design.phtml
@@ -86,5 +86,7 @@
 <div class="design-body-block_1">Вы можете связаться с нами через форму на сайте или заказать звонок менеджера</div>
 
 <div class="promotion-body-block_9">
-    <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+    <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
+        <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+    </a>
 </div>
