--- a/module/Page/view/page/page/promotion.phtml
+++ b/module/Page/view/page/page/promotion.phtml
@@ -87,7 +87,9 @@
 </div>
 
 <div class="promotion-body-block_9">
-    <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+    <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
+        <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+    </a>
     <div class="promotion-body-button_price">РАСЧИТАТЬ ЦЕНУ</div>
     <div class="promotion-body-button_analysis">АНАЛИЗ САЙТА</div>
 </div>
