--- a/module/Page/view/page/page/publicity.phtml
+++ b/module/Page/view/page/page/publicity.phtml
@@ -25,8 +25,8 @@
 
 <div class="publicity-body-block_6">
     <ul>
-        <li>Увеличение узнаваемости вашего бренда</li>
         <li>Раскрутка групп в социальных сетях</li>
+        <li>Увеличение узнаваемости вашего бренда</li>
         <li>Раскрутка в социальных сетях</li>
         <li>Оформление групп и страниц в социальных сетях</li>
         <li>Целевая реклама с продающими объявлениями, имеющими высокое соотношение<br/>Просмотр – заявка</li>
@@ -69,7 +69,9 @@
 </div>
 
 <div class="promotion-body-block_9">
-    <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+    <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
+        <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+    </a>
     <div class="promotion-body-button_price">РАСЧИТАТЬ ЦЕНУ</div>
     <div class="promotion-body-button_analysis">АНАЛИЗ САЙТА</div>
 </div>
