--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -16,11 +16,14 @@
         <?php
         echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
                 ->prependStylesheet($this->basePath() . '/css/style.css')
+                ->prependStylesheet($this->basePath() . '/css/jquery.bxslider.css')
         ?>
 
         <!-- Scripts -->
         <?php
         echo $this->headScript()
+                ->prependFile($this->basePath() . '/js/jquery.autosize.min.js')
+                ->prependFile($this->basePath() . '/js/jquery.bxslider.min.js')
                 ->prependFile($this->basePath() . '/js/jquery.min.js')
                 ->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
                 ->prependFile($this->basePath() . '/js/html5shiv.js', 'text/javascript', array('conditional' => 'lt IE 9',))
@@ -40,10 +43,10 @@
                     <div class="icon-phone"></div>
                     <div class="phones">
                         <div class="phone-skype">
-                            <a class="skype-call-number" href="skype:echo123?call">+375 29 615-27-93</a>
+                            <a class="skype-call-number" href="#">+375 29 615-27-93</a>
                         </div>
                         <div class="phone-skype">
-                            <a class="skype-call-number" href="skype:echo123?call">+375 33 615-27-93</a>
+                            <a class="skype-call-number" href="#">+375 33 615-27-93</a>
                         </div>
                     </div>
                 </div>
@@ -119,6 +122,7 @@
             </div>
         </footer>
 
+
         <script type="text/javascript">
             $(document).ready(function () {
                 var speed = 1000,
@@ -131,6 +135,20 @@
                     } else {
                         $('.wrap-menu').animate({height: originalHeight}, speed);
                     }
+                });
+
+                $('textarea').autosize();
+
+                $('.marketing-body-block_9').bxSlider({
+                    slideWidth: 105,
+                    minSlides: 2,
+                    maxSlides: 4,
+                    moveSlides: 1,
+                    slideMargin: 30,
+                    auto: true,
+                    pause: 4000,
+                    controls: false,
+                    pager: false,
                 });
             });
         </script>
