--- a/module/Page/view/page/page/marketing.phtml
+++ b/module/Page/view/page/page/marketing.phtml
@@ -4,22 +4,22 @@
     </a>
     <div class="title-icon_main page_marketing"></div>
     <a href="<?= $this->url('page', array('action' => 'publicity')) ?>">
-        <div class="title-icon publicity_static"></div
+        <div class="title-icon publicity_static"></div>
     </a>
 </div>
 <div class="title_text">WEB Маркетинг</div>
 
 <div class="promotion-body-block_1">
-    <p>Маркетинговые исследования в интернете - незаменимый инструмент позволяющий<br/>
-        быстро эффективно проводить сбор и анализ данных с различных целевых рынков</p>
-</div>
-
-<div class="marketing-body-block_2">
-    Маркетинговые услуги от компании Азбука Вебмедиа:
+    <p>Маркетинговые исследования в интернете - незаменимый инструмент<br/>
+        позволяющий быстро эффективно проводить сбор и анализ данных с различных целевых рынков</p>
 </div>
 
 <div class="marketing-body-block_3">
 
+</div>
+
+<div class="marketing-body-block_2">
+    Маркетинговые услуги от компании Азбука Вебмедиа:
 </div>
 
 <div class="marketing-body-block_6">
@@ -57,6 +57,7 @@
     с вами свяжутся в удобное для вас время
 </div>
 
+
 <div class="marketing-body-block_9">
     <div class="marketing-body-block_9-item"></div>
     <div class="marketing-body-block_9-item"></div>
@@ -65,6 +66,8 @@
 </div>
 
 <div class="promotion-body-block_9">
-    <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+    <a href="<?= $this->url('page', array('action' => 'checkout')) ?>">
+        <div class="promotion-body-button_order">ОФОРМИТЬ ЗАКАЗ</div>
+    </a>
     <div class="promotion-body-button_price">РАСЧИТАТЬ ЦЕНУ</div>
 </div>
