--- a/module/Page/view/page/page/promotion.phtml
+++ b/module/Page/view/page/page/promotion.phtml
@@ -70,7 +70,7 @@
         <div class="promotion-body-table2-cell_text">в Беларуси,<br/>других странах СНГ</div>
     </div>
     <div class="promotion-body-table2-cell">
-        <div class="promotion-body-table2-cell_title">от 750 у.е.</div>
+        <div class="promotion-body-table2-cell_title">от 750 у.е</div>
         <div class="promotion-body-table2-cell_text">в Англоязычном сегменте<br/>сети (США, Европа)</div>
     </div>
 </div>
