good slider portfolio, add marketing and promotion helper

--- a/module/Page/view/page/page/marketing.phtml
+++ b/module/Page/view/page/page/marketing.phtml
@@ -59,10 +59,7 @@
 
 
 <div class="marketing-body-block_9">
-    <div class="marketing-body-block_9-item"></div>
-    <div class="marketing-body-block_9-item"></div>
-    <div class="marketing-body-block_9-item"></div>
-    <div class="marketing-body-block_9-item"></div>
+    <?php echo $this->Marketing(); ?>
 </div>
 
 <div class="promotion-body-block_9">
