add promotion slider, some styles changes, filter login form

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -70,7 +70,7 @@
                         </h2>
                         <br/>
                         <div class="menu-item_links">
-                            <p><a href="#">Портфолио</a></p>
+                            <p><a href="<?= $this->url('page', array('action' => 'portfolio')) ?>">Портфолио</a></p>
                         </div>
                     </div>
                     <div class="menu-item">
