--- a/module/Page/view/page/page/portfolio.phtml
+++ b/module/Page/view/page/page/portfolio.phtml
@@ -17,7 +17,7 @@
     $(document).ready(function () {
 
 
-        $('.govno').bxSlider({
+        $('.portfolio-body-slider-item_images').bxSlider({
             slideWidth: 365,
             mode: 'vertical',
             moveSlides: 1,
