--- a/module/Page/view/partial/portfolio.phtml
+++ b/module/Page/view/partial/portfolio.phtml
@@ -1,7 +1,7 @@
 <?php foreach ($this->portfolios as $key => $portfolio) { ?>
 
     <div class="portfolio-body-slider-item">
-        <div class="govno" style="height: 500px; float: left;">
+        <div class="portfolio-body-slider-item_images" style="height: 500px; float: left;">
             <div class="portfolio-body-slider-item_left" style="background-image: url('/uploads/Desert.jpg<?php //$portfolio['image'] ?>')"></div>
             <div class="portfolio-body-slider-item_left" style="background-image: url('/uploads/hello.jpg')"></div>
             <div class="portfolio-body-slider-item_left" style="background-image: url('/uploads/orlenok.gif')"></div>
