--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,7 @@ body.index .content {
 
 body.promotion .content, body.design .content, body.contacts .content,
 body.marketing .content, body.publicity .content, body.portfolio .content,
-body.banners .content, body.support .content {
+body.banners .content, body.support .content, body.auth .content {
     width: 800px;
     margin: 60px auto 0;
 }
@@ -569,9 +569,10 @@ footer {
 }
 
 .promotion-body-carusel {
-    width: 800px;
-    height: 200px;
-    margin: 20px auto 0;
+    width: 720px;
+    height: 220px;
+    overflow: hidden;
+    margin: 0 auto;
 }
 
 .promotion-body-carusel_first {
@@ -1036,4 +1037,68 @@ body.contacts .container, body.process-feedback .container {
 
 .portfolio-body-slider-item .bx-wrapper .bx-viewport {
     margin-top: 0;
+}
+
+/* PROMOTION SLIDER */
+
+.promotion-body-carusel_first_logo {
+    background-repeat: no-repeat;
+    width: 125px;
+    height: 40px;
+    background-size: contain;
+    margin: 10px auto;
+}
+
+.promotion-body-carusel_first_activity {
+    height: 80px;
+    overflow: hidden;
+    width: 320px;
+    margin: 0 auto;
+}
+
+.promotion-body-carusel_second_sitelink {
+    height: 17px;
+    margin: 8px 0 0 10px;
+    overflow: hidden;
+    text-decoration: underline;
+    font-weight: bold;
+}
+
+.promotion-body-carusel_second_portfolio_link {
+    margin: 8px 0 0 10px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.promotion-body-carusel_second_portfolio_link a {
+    color: #072154;
+}
+
+.promotion-body-carusel_second_portfolio_link a:hover {
+    text-decoration: underline;
+}
+
+.promotion-body-carusel_second_review_title {
+    margin: 10px auto;
+    font-weight: bold;
+    font-size: 26px;
+    width: 84px;
+}
+
+.promotion-body-carusel_second_review_text {
+    height: 96px;
+    overflow: hidden;
+    width: 320px;
+    margin: 0 auto;
+}
+
+.promotion-body-carusel_first_target {
+    height: 48px;
+    overflow: hidden;
+    width: 320px;
+    margin: 10px auto 0;
+}
+
+.promotion .bx-controls-direction a {
+    margin-top: -30px!important;
 }
