adminka checkouts, feedbacks, users!!!

--- a/module/Admin/view/admin/admin/index.phtml
+++ b/module/Admin/view/admin/admin/index.phtml
@@ -1,1 +1,21 @@
-xyi
+<a href="/admin/checkouts"><div class="admin-button">Оформленные заказы(Complete)</div></a>
+<a href="/admin/feedbacks"><div class="admin-button">feedbacks(Complete)</div></a>
+<a href="/admin/users"><div class="admin-button">Работа с модераторами(Complete)</div></a>
+<div class="admin-button">Работа с портфолио</div>
+<div class="admin-button">Работа с баннерами</div>
+<div class="admin-button">Работа со страницами(not working)</div>
+
+<style>
+    .admin-button {
+        width: 340px;
+        line-height: 30px;
+        font-size: 1.4em;
+        color: white;
+        font-family: futurical !important;
+        cursor: pointer;
+        border: 0;
+        background: #071f4e;
+        text-align: center;
+        margin: 10px auto;
+    }
+</style>
