--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,8 @@ body.index .content {
 
 body.promotion .content, body.design .content, body.contacts .content,
 body.marketing .content, body.publicity .content, body.portfolio .content,
-body.banners .content, body.support .content, body.auth .content {
+body.banners .content, body.support .content, body.auth .content, 
+body.admin .content{
     width: 800px;
     margin: 60px auto 0;
 }
@@ -1101,4 +1102,42 @@ body.contacts .container, body.process-feedback .container {
 
 .promotion .bx-controls-direction a {
     margin-top: -30px!important;
+}
+
+/* BANNERS */
+
+.banners-body-table {
+    overflow: hidden;
+    margin: 20px auto 0;
+    width: 600px;
+}
+
+.banners-price-table {
+    text-align: center;
+    font-size: 18px;
+    padding-top: 20px;
+}
+
+.banners-price-table_head {
+    font-weight: bold;
+    border-bottom: 1px solid #dadada;
+}
+
+.banners-price-table_head, .banners-price-table_body_static,
+.banners-price-table_body_animate {
+    padding-top: 10px;
+    overflow: hidden;
+}
+
+.banners-price-table_item {
+    float: left;
+    width: 105px;
+    height: 20px;
+    line-height: 20px;
+}
+
+.banners-price-table_item:first-of-type {
+    text-align: left;
+    width: 170px;
+    font-weight: bold;
 }
