images for portfolio

--- a/module/Admin/view/admin/admin/index.phtml
+++ b/module/Admin/view/admin/admin/index.phtml
@@ -1,7 +1,7 @@
 <a href="/admin/checkouts"><div class="admin-button">Оформленные заказы(Complete)</div></a>
 <a href="/admin/feedbacks"><div class="admin-button">feedbacks(Complete)</div></a>
 <a href="/admin/users"><div class="admin-button">Работа с модераторами(Complete)</div></a>
-<div class="admin-button">Работа с портфолио</div>
+<a href="/admin/addportfolio"><div class="admin-button">Работа с портфолио(now)</div></a>
 <div class="admin-button">Работа с баннерами</div>
 <div class="admin-button">Работа со страницами(not working)</div>
 
