--- a/public/css/style.css
+++ b/public/css/style.css
@@ -282,6 +282,7 @@ footer {
     width: 200px;
     -webkit-transform: rotate(270deg);
     -moz-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
     margin-left: -85px;
     -o-transform: rotate(270deg);
     white-space: nowrap;
@@ -910,6 +911,7 @@ body.contacts .container, body.process-feedback .container {
     line-height: 30px;
     font-size: 20px;
     margin: 0;
+    cursor: pointer;
 }
 
 .feedback-form-content pre {
