--- a/module/Page/view/page/page/marketing.phtml
+++ b/module/Page/view/page/page/marketing.phtml
@@ -14,7 +14,10 @@
         позволяющий быстро эффективно проводить сбор и анализ данных с различных целевых рынков</p>
 </div>
 
-<div class="marketing-body-block_3">
+<div class="marketing-body-block_3_part1">
+
+</div>
+<div class="marketing-body-block_3_part2">
 
 </div>
 
