--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,30 +53,26 @@ body, html {
 }
 
 body.index .content {
-    width: 1120px;
+    max-width: 935px;
     margin: 60px auto 0;
 }
 
-body.promotion .content, body.design .content, body.contacts .content,
-body.marketing .content, body.publicity .content, body.portfolio .content,
-body.banners .content, body.support .content, body.auth .content, 
+body.portfolio .content, body.process-checkout .content, body.checkout .content,
+body.support .content, body.contacts .content, body.publicity .content,
+body.marketing .content, body.design .content, body.promotion .content {
+    max-width: 800px;
+    margin: 60px auto 0;
+}
+
+
+
+body.banners .content,  body.auth .content, 
 body.admin .content{
     width: 800px;
     margin: 60px auto 0;
 }
 
 /* CHECKOUT */
-body.checkout .content, body.process-checkout .content {
-    width: 800px;
-    margin: 60px auto 0;
-}
-
-body.checkout .feedback-form, body.process-checkout .feedback-form {
-    margin: 20px auto 0;
-    float: none;
-    overflow: hidden;
-}
-
 body.checkout .form-submit, body.process-checkout .form-submit {
     text-align: center;
 }
@@ -92,29 +88,27 @@ nav {
     padding-top: 10px;
     position: relative;
     overflow: hidden;
-    min-width: 870px;
 }
 
 .nav-left {
-    padding-left: 20px;
-    width: 204px;
+    width: 250px;
     float: left;
-    height: 100%;
 }
 
 .main-logo {
     background-image: url(/img/main-logo.png);
     background-size: contain;
-    width: 204px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    width: 250px;
     height: 42px;
     display: block;
-    float: left;
 }
 
 .nav-right {
     padding-right: 10px;
     float: right;
-    width: 265px;
+    width: 250px;
     height: 60px;
     font-family: euroRegular !important;
 }
@@ -129,7 +123,7 @@ nav {
 
 .phones {
     float: left;
-    width: 210px;
+    width: 193px;
     height: 60px;
 }
 .phone-skype {
@@ -200,16 +194,13 @@ footer {
 }
 
 .container {
-    /* width: 100%; */
     margin: 0 auto;
-    /* min-height: 500px; */
-    min-width: 870px;
 }
 
 .menu {
     font-family: introRegular !important;
     position: absolute;
-    width: 550px;
+    width: 100px;
     font-size: 24px;
     top: 25px;
     text-align: center;
@@ -221,15 +212,16 @@ footer {
 }
 
 .main-navigation {
-    height: 200px;
+    overflow: hidden;
+    margin-top: 100px;
 }
 
 .main-navigation-item {
-    width: 17%;
-    float: left;
+    min-width: 190px;
+    display: inline-block;
     cursor: pointer;
     text-align: center;
-    margin: 0 41px;
+    margin: 0 20px;
 }
 
 .caption {
@@ -242,34 +234,28 @@ footer {
     font-family: niveaBook !important;
 }
 
-/*.left-align {
-    text-align: left;
-    float: left;
+body.index .bx-viewport {
+    height: auto !important;
 }
 
-.right-align {
-    text-align: right;
-    float: right;
-}*/
-
 .slider {
-    width: 100%;
-    height: 120px;
-    min-width: 700px;
-    margin-top: 10px;
-    margin-bottom: 40px;
+    overflow: hidden;
     text-align: right;
+}
+
+.slider-item {
+    overflow: hidden;
 }
 
 .slider-big-text {
-    font-size: 3em;
-    margin: 10px 0;
+    font-size: 30px;
     font-weight: bold;
     color: #072154;
+    margin-bottom: 30px;
 }
 
 .slider-small-text {
-    font-size: 2em;
+    font-size: 26px;
     color: #072154;
 }
 
@@ -307,11 +293,10 @@ footer {
 }
 
 .wrap-menu-items {
-    width: 1170px;
+    max-width: 1170px;
     margin: 0 auto;
     left: 0;
     right: 0;
-    height: 120px;
 }
 
 .menu-item {
@@ -350,7 +335,6 @@ footer {
 
 .menu-item:first-of-type div {
     border-left: 0px solid #000000;
-    height: 900px;
 }
 
 
@@ -423,6 +407,7 @@ footer {
     float: left;
     width: 140px;
     height: 120px;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -449,7 +434,7 @@ footer {
 }
 
 .promotion-body-table {
-    width: 800px;
+    /* width: 800px; */
     margin: 0 auto;
     margin-top: 15px;
     /* height: 120px; */
@@ -463,11 +448,13 @@ footer {
     padding: 15px;
     float: left;
     width: 170px;
-    height: 100%;
+    /* height: 100%; */
     font-size: 18px;
     color: #072154;
     font-weight: bold;
     /* height: 90px; */
+    overflow: hidden;
+    margin: 0 auto;
 }
 
 .promotion-body-table-cell_number {
@@ -495,9 +482,10 @@ footer {
 
 .promotion-body-block_4 {
     list-style-type: disc;
-    width: 600px;
+    /* width: 600px; */
     margin: 10px auto 0;
     font-size: 18px;
+    padding-left: 25px;
 }
 
 .promotion-body-block_4 li {
@@ -512,17 +500,18 @@ footer {
 }
 
 .promotion-body-block_6 {
-    width: 800px;
+    /* width: 800px; */
     margin: 10px auto 0;
     font-size: 18px;
     background: #d2d2d2;
+    padding-left: 25px;
 }
 
 .promotion-body-block_6 ul {
-    width: 750px;
+    /* width: 750px; */
     margin: 0 auto;
-    padding-left: 50px;
-    padding-left: 10px;
+    /* padding-left: 50px; */
+    /* padding-left: 10px; */
     list-style-type: disc;
     line-height: 24px;
 }
@@ -537,10 +526,11 @@ footer {
 }
 
 .promotion-body-table2 {
-    width: 800px;
+    /* width: 800px; */
     margin: 0 auto;
-    height: 100px;
+    /* height: 100px; */
     margin-top: 10px;
+    overflow: hidden;
 }
 
 .promotion-body-table2-cell {
@@ -552,6 +542,8 @@ footer {
     height: 60px;
     text-align: center;
     border-left: 1px solid #072154;
+    /* display: inline-block; */
+    margin: 10px auto;
 }
 
 .promotion-body-table2-cell:first-of-type {
@@ -565,21 +557,21 @@ footer {
 }
 
 .promotion-body-block_8 {
-    width: 800px;
+    /* width: 800px; */
     margin: 0 auto;
     font-size: 18px
 }
 
 .promotion-body-carusel {
     width: 720px;
-    height: 220px;
+    /* height: 220px; */
     overflow: hidden;
     margin: 0 auto;
 }
 
 .promotion-body-carusel_first {
     width: 340px;
-    height: 200px;
+    /* height: 200px; */
     background: #d2d2d2;
     float: left;
     margin-right: 40px;
@@ -612,8 +604,8 @@ footer {
 
 .promotion-body-block_9 {
     margin: 20px auto 0;
-    width: 800px;
-    height: 40px;
+    /* width: 800px; */
+    /* height: 40px; */
     text-align: center;
     line-height: 40px;
     font-size: 20px;
@@ -622,11 +614,12 @@ footer {
 }
 
 .promotion-body-button_order {
-    width: 248px;
+    width: 250px;
     background: #555555;
     height: 100%;
     color: white;
     display: inline-block;
+    margin: 10px auto;
 }
 
 .promotion-body-button_price {
@@ -634,8 +627,9 @@ footer {
     background: #555555;
     height: 100%;
     color: white;
-    margin-left: 20px;
+    /* margin-left: 20px; */
     display: inline-block;
+    margin: 10px auto;
 }
 
 .promotion-body-button_analysis {
@@ -643,8 +637,9 @@ footer {
     background: #555555;
     height: 100%;
     color: white;
-    margin-left: 20px;
+    /* margin-left: 20px; */
     display: inline-block;
+    margin: 10px auto;
 }
 
 
@@ -659,37 +654,51 @@ footer {
     font-family: niveaBook !important;
 }
 
-.marketing-body-block_3 {
-    width: 800px;
+.marketing-body-block_3_part1 {
+    width: 245px;
     margin: 0 auto;
-    height: 245px;
+    height: 210px;
     margin-top: 20px;
-    background-image: url(/img/marketing_diagram.png);
+    background-image: url(/img/marketing_diagram_1.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    float: left;
+}
+
+.marketing-body-block_3_part2 {
+    width: 550px;
+    margin: 0 auto;
+    height: 210px;
+    margin-top: 20px;
+    background-image: url(/img/marketing_diagram_2.png);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    float: left;
 }
 
 .marketing-body-block_6 {
-    width: 800px;
-    margin: 10px auto 0;
+    /* width: 800px; */
+    margin: 10px auto;
     font-size: 20px;
     background: #d2d2d2;
     color: #072154;
     font-family: niveaBook !important;
+    padding-left: 25px;
 }
 
 .marketing-body-block_6 ul {
-    width: 750px;
+    /* width: 750px; */
     margin: 0 auto;
-    padding-left: 50px;
-    padding-left: 10px;
+    /* padding-left: 50px; */
+    /* padding-left: 10px; */
     list-style-type: disc;
     line-height: 26px;
 }
 
 .marketing-body-block_5 {
-    width: 800px;
+    /* width: 800px; */
     margin: 0 auto;
     font-size: 19px;
     margin-top: 40px;
@@ -709,9 +718,10 @@ footer {
 }
 
 .marketing-body-block_5-item_text {
-    width: 780px;
+    /* width: 780px; */
     text-align: justify;
-    height: 69px;
+    /* height: 69px; */
+    margin-bottom: 15px;
 }
 
 .marketing-body-block_7 {
@@ -724,7 +734,7 @@ footer {
 
 .marketing-body-block_8 {
     margin: 10px auto 0;
-    width: 800px;
+    /* width: 800px; */
     font-size: 18px;
     line-height: 20px;
     padding: 20px 10px;
@@ -756,7 +766,7 @@ footer {
 }
 
 .design-body-block_3 {
-    width: 800px;
+    /* width: 800px; */
     margin: 10px auto 0;
     text-align: center;
     font-size: 18px;
@@ -775,35 +785,36 @@ footer {
     background-image: url(/img/pr-image.jpg);
     background-position: center bottom;
     background-repeat: no-repeat;
-    width: 800px;
+    /* width: 800px; */
     height: 85px;
     margin: 0 auto;
 }
 
 .publicity-body-block_6 {
-    width: 780px;
+    /* width: 780px; */
     margin: 10px auto 0;
     font-size: 17px;
     color: #072154;
-    height: 150px;
+    /* height: 150px; */
+    padding-left: 25px;
 }
 
 .publicity-body-block_6 ul {
-    width: 800px;
-    padding-left: 50px;
-    padding-left: 10px;
+    /* width: 800px; */
+    /* padding-left: 50px; */
+    /* padding-left: 10px; */
     list-style-type: disc;
     line-height: 26px;
 }
 
 .publicity-body-block_6 ul li {
-    float: left;
-    width: 380px;
+    /* float: left; */
+    /* width: 380px; */
 }
 
 /* CONTACTS */
 
-body.contacts .container, body.process-feedback .container {
+body.process-feedback .container {
     width: 800px;
     margin: 0 auto;
     margin-top: 60px;
@@ -821,15 +832,15 @@ body.contacts .container, body.process-feedback .container {
 
 .contacts-right-column_address {
     margin-left: 20px;
-    width: 380px;
-    float: left;
+    /* width: 380px; */
+    /* float: left; */
     font-size: 20px;
 }
 
 .contacts-right-column_phones {
     margin-top: 20px;
     margin-left: 20px;
-    width: 380px;
+    width: 280px;
     float: left;
     font-size: 25px;
     line-height: 25px;
@@ -867,16 +878,15 @@ body.contacts .container, body.process-feedback .container {
 }
 
 .contacts-right-column_phone-number {
-    width: 330px;
+    width: 230px;
     height: 30px;
     margin-left: 20px;
     float: left;
 }
 
 .feedback-form-content {
-    width: 380px;
+    width: 100%;
     float: left;
-    margin-left: 20px;
 }
 
 .feedback-form-content input {
@@ -920,15 +930,17 @@ body.contacts .container, body.process-feedback .container {
 }
 
 .contacts-right-column {
-    width: 400px;
-    height: 170px;
+    /* width: 400px; */
+    /* height: 170px; */
     float: left;
+    overflow: hidden;
 }
 
-.feedback-form {
-    width: 400px;
+.feedback-form { 
+    min-width: 380px;
     float: left;
     margin-top: 5px;
+    margin-left: 20px;
 }
 
 .form-error {
@@ -977,12 +989,13 @@ body.contacts .container, body.process-feedback .container {
 }
 
 .portfolio-body-slider {
+    width: 100%;
     float: left;
     overflow: hidden;
 }
 
 .portfolio-body-slider-item {
-    height: 550px;
+    overflow: hidden;
 }
 
 .portfolio-body-slider-item_left {
@@ -1143,4 +1156,183 @@ body.contacts .container, body.process-feedback .container {
     text-align: left;
     width: 170px;
     font-weight: bold;
+}
+
+body.checkout .feedback-form {
+    float: none;
+    width: 380px;
+    margin: 0 auto;
+}
+
+
+@media all 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+    /* INDEX */
+    .main-navigation-item {
+        display: block;
+        margin: 20px;
+    }
+
+    .slider-big-text {
+        font-size: 20px;
+    }
+
+    .slider-small-text {
+        font-size: 15px;
+    }
+
+    .slider-item {
+        width: 320px;
+    }
+
+    .contacts-button {
+        width: 0;
+    }
+
+    nav {
+        height: 140px;
+        padding: 0;
+    }
+
+    .nav-right {
+        float: none;
+        margin: 0 auto;
+        padding: 0;
+    }
+
+    .nav-left {
+        margin: 3px auto 10px;
+        float: none;
+        padding: 0;
+    }
+
+    .wrap-menu {
+        top: 139px;
+    }
+
+    .menu {
+        top: 115px;
+        font-size: 22px;
+    }
+
+    .menu-item {
+        float: none;
+        margin: 0;
+        text-align: center;
+        height: auto;
+    }
+
+    .menu-item h2 {
+        font-size: 18px;
+        padding: 0;
+    }
+
+    .menu-item_links {
+        border: 0;
+        border-bottom: 1px solid #000000;
+        padding: 0;
+        min-height: 50px;
+        height: auto;
+    }
+
+    .title-icons {
+        width: 320px;
+    }
+
+    .title-icon {
+        width: 105px;
+    }
+
+    .title-icon_main {
+        width: 110px;
+    }
+
+    .promotion-body-table-cell {
+        float: none;
+    }
+
+    .promotion-body-table2-cell {
+        float: none;
+        border-left: 0;
+        border-bottom: 1px solid #072154;
+    }
+
+    .promotion-body-carusel_first {
+        float: none;
+        width: inherit;
+    }
+    
+    .promotion-body-carusel_second {
+        float: none;
+        width: inherit;
+    }
+
+    .marketing-body-block_3_part1 {
+        width: 245px;
+        height: 180px;
+        float: none;
+    }
+
+    .marketing-body-block_3_part2 {
+        width: 330px;
+        height: 135px;
+        float: none;
+    }
+
+    .marketing-body-block_5 {
+        font-size: 18px;
+    }
+
+    .title-line {
+        display: none;
+    }
+
+    .title-contacts {
+        display: block;
+        width: inherit;
+    }
+
+    .govno {
+        width: 100%;
+        height: 400px;
+        float: none !important;
+    }
+    .contacts-right-column {
+        float: none;
+    }
+
+    .feedback-form {
+        float: none;
+        min-width: 320px;
+        margin: 2px;
+    }
+
+    .feedback-form-content {
+        float: none;
+    }
+
+    .portfolio-body-slider-item_left {
+        float: none;
+    }
+
+    .portfolio-body-slider-item_right {
+        float: none;
+        margin: 0 auto;
+    }
+
+    .portfolio-body-slider-item_images {
+        float: none;
+    }
+    body.portfolio .bx-controls-direction a {
+        margin-top: -30px!important;
+    }
+    
+    body.portfolio .bx-prev {
+        left: 0;
+    }
+    
+    body.portfolio .bx-next {
+        right: 0;
+    }
 }
